WIP: Added bible module
